# 26_stubby

./: .gitignore  README.md  pyproject.toml  setup.py
figs/: style_config.py
figs/data/: abf1_mean_emats.mat
figs/fig1/: fig1.ipynb
figs/fig2/: fig2.ipynb  theta_sim_L100_C20.npy  theta_sim_L100_C4.npy  theta_sim_L10_C4.npy
figs/fig3/: fig3.ipynb
figs/fig3_figS1/: fig3_figS1.ipynb  paper.mplstyle
figs/fig4/: fig4.ipynb
figs/fig4_figS2/: fig4_figS2.ipynb
figs/fig5/: fig5.ipynb
figs/figS3/: figS3.ipynb
src/: cgf.py  dlr.py  landscape.py  touzet.py
src/cpp/: Matrix.cpp  Matrix.h  touzet.cpp
