[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "stubby"
version = "0.1.0"
description = "Code and manuscript for 'Mount Fuji's stubby peak: the genotypic density of additive landscapes near maximal fitness'"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Justin Kinney"},
]
dependencies = [
    "logomaker>=0.8.7",
    "mavenn>=1.1.4",
    "matplotlib>=3.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "tensorflow>=2.16",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel",
    "jupyter",
    "matplotlib",
]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
]
